[metadata]
name = Wikidata
version = attr: wikidata.__version__
description = Wikidata client library
long_description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/dahlia/wikidata
project-urls =
    Docs = https://wikidata.readthedocs.io/
author = Hong Minhee
author_email = hong.minhee@gmail.com
license = GPLv3 or later
keywords = wikidata ontology
platforms = any
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    # CHECK If you're going to change the list of supported Python versions
    # update .travis.yml and tox.ini as well.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.4.0
install_requires =
    Babel >= 2.0
    typing; python_version<"3.5"

[options.packages.find]
exclude =
    docs
    tests

[options.package_data]
wikidata =
    py.typed

[options.extras_require]
tests =
    flake8 >= 3.6.0
    flake8-import-order-spoqa
    pytest ~= 4.0.1
    pytest-flake8 ~= 1.0.2
mypy =
    mypy >= 0.650

[tool:pytest]
addopts = --ff --doctest-glob=*.rst --doctest-modules --flake8
testpaths =
    tests
    wikidata
    README.rst
doctest_optionflags =
    NORMALIZE_WHITESPACE
    IGNORE_EXCEPTION_DETAIL
    ELLIPSIS

[flake8]
exclude = .tox,docs,typeshed
import-order-style = spoqa
application-import-names = wikidata, tests
