[metadata]
name = Wikidata
version = attr: wikidata.__version__
description = Wikidata client library
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/dahlia/wikidata
project_urls =
    Docs = https://wikidata.readthedocs.io/
author = Hong Minhee
author_email = hong.minhee@gmail.com
license = GPLv3 or later
keywords = wikidata ontology
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    # CHECK If you're going to change the list of supported Python versions
    # update .travis.yml and tox.ini as well.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8.0
install_requires =
    typing; python_version<"3.5"

[options.packages.find]
exclude =
    docs
    tests

[options.package_data]
wikidata =
    py.typed

[options.extras_require]
tests =
    flake8 >= 6.0.0
    flake8-import-order-spoqa
    pytest ~= 7.2.1
    mypy >= 0.991
docs =
    furo
    rstcheck
    Sphinx ~= 6.1.3

[tool:pytest]
addopts = --ff --doctest-glob=*.rst --doctest-modules
testpaths =
    tests
    wikidata
    README.rst
doctest_optionflags =
    NORMALIZE_WHITESPACE
    IGNORE_EXCEPTION_DETAIL
    ELLIPSIS

[flake8]
exclude = .tox,build,dist,docs,typeshed
import-order-style = spoqa
application-import-names = wikidata, tests
